# align-hmm

./: .gitignore  Cargo.toml  Makefile
python/: compute.py  model.py  show_data.ipynb
scripts/: eda.sh  em_train.sh  supervised_train.sh  supervised_train_ecoli_dbscan.sh  supervised_train_ecoli_sf.sh  train_data.sh  train_data_ecoli_no-del.sh
src/: cli.rs  common.rs  dataset.rs  eda.rs  em_training.rs  fb.rs  hmm_model.rs  hmm_models.rs  main.rs  model.rs  supervised_training.rs  train_data.rs  train_instance.rs
src/em_training/: fb.rs  fb_v2.rs  model.rs
src/hmm_models/: boundaries_4_100.rs  v1.rs  v2.rs
src/supervised_training/: common.rs  train.rs  train_data.rs  train_v2.rs
